--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Daily Dev Tips Boilerplate</title>
-    <meta name="description" content="Basic HTML boilerplate" />
-    <meta name="author" content="Daily Dev Tips" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
 
-  <body>
-    
-    <script src="js/main.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A beginners guide to fresh water shrimp keeeping">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/8eea582003.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/main.css">
+
+    <title>Say it like you meme it</title>
+</head>
+
+<body>
+
+    <header class="container-fluid">
+        <h1>Say it like you meme it</h1>
+    </header>
+
+    <div class="container-fluid ">
+
+        <div class="row d-flex justify-content-center">
+
+            <div class="col-xl-5 canvas-wrapper ">
+                <div class="croparrea"></div>
+                <canvas id="fjcanvas"></canvas>
+            </div>
+
+
+        </div>
+
+    </div>
+<script rel="preload"  src="https://cdn.jsdelivr.net/npm/fabric@4.3.0/dist/fabric.min.js" as="script"></script>
+    <script src="assets/js/main.js"></script>
+
+</body>
 </html>
