addet a drag function

--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 
 <body>
   <div class="wrap">
- <div class="dragbar"></div>
- <canvas id="fjcanvas"></canvas>
- <div class="wrap__inner"></div>
- <div class="croparrea"></div>
- 
+    <div class="dragbar"></div>
+    <canvas id="fjcanvas"></canvas>
+    <div class="wrap__inner"></div>
+    <div class="croparrea"></div>
 </div>
-    
+    <div class="toolbar"></div>
 <script rel="preload"  src="https://cdn.jsdelivr.net/npm/fabric@4.3.0/dist/fabric.min.js" as="script"></script>
     <script src="assets/js/main.js"></script>
 
