addet drag for top and bottom of editor window

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <div class="wrap">
     <div class="dragbar"></div>
+    <div class="dragbar dragbarb"></div>
     <canvas id="fjcanvas"></canvas>
     <div class="wrap__inner"></div>
     <div class="croparrea"></div>
